<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navProperties"
            android:title="@string/properties"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/navAddProperty"
            android:title="@string/add_property"
            android:icon="@drawable/ic_add_box_black_24dp"/>
        <item
            android:id="@+id/navReviews"
            android:title="@string/reviews"
            android:icon="@drawable/ic_comment_black_24dp"/>
        <item
            android:id="@+id/navMyAccount"
            android:title="@string/my_account"
            android:icon="@drawable/ic_person_black_24dp"/>
        <item
            android:id="@+id/navLogOut"
            android:title="@string/logout"
            android:icon="@drawable/ic_warning_black_24dp"/>
    </group>



</menu>
