<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPropertyActivity"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="56dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/relativeLayoutImgAdded">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/imgAddedPhoto"
            android:background="@color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:textColor="@color/red"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:onClick="btnClickedDeleteTakenPhoto"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/relativeLayoutAddProperty">


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardBackgroundColor="@color/lightGreen">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:contentDescription="@string/add_photo"
                android:src="@drawable/add_photo_icon2"
                android:layout_marginTop="70dp"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:onClick="btnClickedAddPhoto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                android:layout_marginTop="140dp"
                android:layout_gravity="center_horizontal"
                style="@android:style/Widget.Material"
                android:gravity=""/>


        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/Theme.AppCompat.Light"
            android:hint="@string/address"
            android:id="@+id/inpAddress"
            android:inputType="text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:hint="@string/city"
                style="@style/Theme.AppCompat.Light"
                android:id="@+id/inpCity"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:hint="@string/state"
                style="@style/Theme.AppCompat.Light"
                android:id="@+id/inpState"/>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                style="@style/Theme.AppCompat.Light"
                android:hint="@string/square_meters"
                android:inputType="number"
                android:id="@+id/inpSquareMeters"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:hint="@string/amount_of_bedrooms"
                style="@style/Theme.AppCompat.Light"
                android:inputType="number"
                android:id="@+id/inpBedrooms"/>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/price_of_property"
            style="@style/Theme.AppCompat.Light"
            android:inputType="number"
            android:id="@+id/inpPrice"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAlignment="center"
            android:text="@string/add_property"
            android:id="@+id/btnAddProperty"
            android:onClick="btnClickedAddProperty"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="7dp"
        android:paddingBottom="7dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/app_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>


</LinearLayout>