<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/side_nav_bar"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/app_icon"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/inpUsername"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/inpPassword"
        android:inputType="textPassword"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnLoginFragment"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"/>

    </LinearLayout>



</LinearLayout>